fix: Weird menu rendering placement issue on Firefox browsers

--- a/src/scss/overlay.scss
+++ b/src/scss/overlay.scss
@@ -11,7 +11,7 @@
 
 slot {
   position: absolute;
-  display: block;
+  display: flex;
 }
 
 /***************
